--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <td><img src="images/mns.png" alt="my image" width="150" height="150"></td>
     <td>  <h1>Manasa Mudigonda </h1>
       <p><em>Research Scholar at <strong> <a href="https://iith.ac.in/" target="_blank">IIT Hyderabad</a></strong>.</em></p>
-      <p>I work on speech signal processing. I am interest in coding and animation.</p></td>
+      <p>I work on speech signal processing. </p></td>
   </tr>
 </table>
 
